@@ -1,7 +1,7 @@
 project(
   'gnome-calendar',
                'c',
-           version: '3.29.92',
+           version: '3.30.0',
            license: 'GPL3+',
      meson_version: '>= 0.42.0'
 )
@@ -35,7 +35,7 @@ calendar_schemadir = join_paths(calendar_datadir, 'glib-2.0', 'schemas')
 ###########
 
 calendar_buildtype = get_option('buildtype')
-calendar_debug = calendar_minor_version.is_odd() or buildtype.contains('debug')
+calendar_debug = calendar_minor_version.is_odd() or calendar_buildtype.contains('debug')
 enable_tracing = get_option('tracing')
 enable_gtk_doc = get_option('documentation')
 
