@@ -1,3 +1,6 @@
+Major changes in 3.30.0:
+* Updated translations
+
 Major changes in 3.29.92:
 * Better handle 401 status codes when adding calendars (Ralph Plawetzki)
 * Updated translations
